--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-"solu‡äes urbanas df" 
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=/build/html/index.html">
+        <script type="text/javascript">
+            //window.location.href = "/build/html/index.html"
+        </script>
+        <title>Welcome Soluções Urbanas</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. 
+        If you are not redirected automatically, follow this <a href='https://solucoesurbanasdf.github.io/build/html/index.html'>click it now</a>.-->
+		<h1>Welcome Soluções Urbanas - Building Site</h1>
+		
+    </body>
+</html>
