--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <script type="text/javascript">
             //window.location.href = "/build/html/index.html"
         </script>
-        <title>Welcome Soluções Urbanas</title>
+        <title>Welcome SoluÃ§Ãµes Urbanas</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. 
         If you are not redirected automatically, follow this <a href='https://solucoesurbanasdf.github.io/build/html/index.html'>click it now</a>.-->
-		<h1>Welcome Soluções Urbanas - Building Site</h1>
+		<h1>Welcome SoluÃ§Ãµes Urbanas - Building Site</h1>
 		
     </body>
 </html>
