--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@ crossorigin="anonymous">
 		fillColor: '#f03',
 		fillOpacity: 0.5,
 		radius: 500
-	}).addTo(mymap);</script>
+	}).addTo(mymap);
+	
+	</script>
+	
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-15244837-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-15244837-5');
+</script>
 	</body>
 </html>
