--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <html>
-<head><title>Soluções Urbanas DF</title>
-<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+<head><title>Aoluções Urbanas DF - Instalações Eletricas Brasília - Eletrica e Eletricista Brasília</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="author" content="Soluções Urbanas DF" />
+  <meta name="robots" content="index,follow" />
+  <meta name="msnbot" content="index,follow"/>
+  <meta name="googlebot" content="index,follow"/>
+  <meta name="revisit-after" content="1 days"/>
+  <meta name="designer" content="Soluções Urbanas DF"/>
+  <meta name="keywords" content=""/>
+  <meta name="description" content="Somos a Soluções Urbanas DF, projetamos, executamos e garantimos suas instalações. Peritos e experiêntes, a mais de 20 anos no mercado desenvolvemos valor ao seu projeto e a melhor experiência para nossos clientes. Projetos e Instalação de Elétrica Residencial, Predial, Industrial e Telecomunicações. Fale com a gente de descubra como revolucionar seu projeto com o maior custo benefício do mercado. Amor aos detalhes que fazem a diferença." />
+	
+	
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" 
 crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
