--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ crossorigin="anonymous">
 									<i class="fab fa-whatsapp"></i>
 								</a>
 								<a id="tel" href="tel:+5561981349728" color="white" style="cursor:pointer">+55 61 98134-9728</a>
-								<br>Seg - Sex, 9:00-18:00
+								<br>Seg - Sáb, 9:00 - 18:00
 								<br>
 								<a href="mailto:pontesbravo@gmail.com" target="_blank" color="green" style="cursor:pointer">
 									pontesbravo<i class="fas fa-at"></i>gmail.com
