melhoria de contatos e serviços

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ crossorigin="anonymous">
 <div class="header4-content">
 <nav class="navbar navbar-expand-lg row">
 <div class="col-md-4">
-	<a class="navbar-brand" href="#">Elétrica Residencial, Predial e Industrial</a>
+	<a class="navbar-brand" href="#"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 </div><!-- menu colapsed -->
 <div class="collapse navbar-collapse col-md-8 navbar-detail">
@@ -37,8 +37,46 @@ crossorigin="anonymous">
 			<a class="nav-link" href="#header-page4"><span class="sr-only">(current)</span></a>
 		</li>
 	</ul>
-</div></nav></div>
-<div class="header4-main-content"><div class="header4-title"><h1>Soluções Urbanas</h1><p>Amor aos detalhes que fazem a diferença</p></div></div><div class="header4-detail row text-center"><div class="col-md-4 card-detail"><i class="fas fa-drafting-compass" style="color:black"></i><h4>Análise e Projeto</h4><p>Cada minuto que utilizamos planejando permitirá que economize dinheiro, tempo e energia na consecução dos resultados que almeja.</p></div><div class="col-md-4 card-detail"><i class="fab fa-codepen" style="color:black"></i><h4>Execução</h4><p>Com foco e eficiência implementamos o seu projeto com toda garantia de satisfação.</p></div><div class="col-md-4 card-detail"><i class="fas fa-coffee" style="color:black"></i><h4>Qualidade</h4><p>Com as melhores práticas e normas de qualidade, executamos o serviço com o máximo de desempenho e durabilidade que cada material pode oferecer.</p></div></div></div>
+</div></nav>
+</div>
+
+<br/>
+<div class="header4-main-content">
+	<div class="header4-title">
+		<h1>Soluções Urbanas</h1>
+		<h2 class="text-center" >Elétrica e Tecnologia</h2>
+	</div>
+	
+	<div class="header4-banner text-center"><img src="pontes5.png" /></div>
+	
+</div>
+<br/>
+<div class="header4-detail row text-center">
+	<div class="col-md-4 card-detail">
+	<i class="fas fa-plug" style="color:black"></i>
+	<h4>Elétrica Residencial</h4>
+	</div>
+	<div class="col-md-4 card-detail"><i class="fas fa-home" style="color:black"></i>
+	<h4>Automação Residencial</h4>
+	</div>
+	<div class="col-md-4 card-detail">
+	<i class="fab fa-codepen" style="color:black"></i>
+	<h4>Elétrica Predial</h4>
+	</div>
+	<div class="col-md-4 card-detail"><i class="fas fa-code-branch" style="color:black"></i>
+	<h4>Redes de Telecomunicação</h4>
+	</div>
+	<div class="col-md-4 card-detail">
+	<i class="fas fa-laptop-code" style="color:black"></i>
+	<h4>Sistemas Web</h4>
+	</div>
+	<div class="col-md-4 card-detail"><i class="fas fa-toolbox" style="color:black"></i>
+	<h4>Suporte Técnico</h4>
+	</div>
+
+	
+</div>
+</div>
 </section>
 
 <!-- pricing -->
@@ -55,21 +93,21 @@ crossorigin="anonymous">
 		<div class="row">
 				<div class="get-in">
 					<h2>Contatos</h2>
-					<p>Você precisa de mais informações? <br/>Entre em contato conosco!</p>
 					<div class="find-us">
-							<div class="address"><div class="address-icon"><i class="fas fa-mobile-alt"></i></div>
-							<div class="address-detail"><h5>Solicite um Orçamento</h5>
+
 							
 							<p>
 								<a href="https://wa.me/5561981349728" target="_blank" color="green" style="cursor:pointer">
-									<i class="fab fa-whatsapp"></i>
+									<i class="fab fa-whatsapp"></i> Whatsapp Online
 								</a>
-								<a id="tel" href="tel:+5561981349728" color="white" style="cursor:pointer">+55 61 98134-9728</a>
-								<br>Seg - Sáb, 9:00 - 18:00
+								<br/>
+								<a id="tel" href="tel:+5561981349728" color="white" style="cursor:pointer">
+									<i class="fas fa-mobile-alt"></i> +55 61 98134-9728</a>
 								<br>
 								<a href="mailto:pontesbravo@gmail.com" target="_blank" color="green" style="cursor:pointer">
-									pontesbravo<i class="fas fa-at"></i>gmail.com
+									<i class="fas fa-envelope"></i> pontesbravo<i class="fas fa-at"></i>gmail.com
 								</a>
+								<br> <i class="fas fa-clock"></i> Seg - Sáb, 9:00 - 18:00
 							 </p>
 							
 							</div>
