--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ crossorigin="anonymous">
 				</div>
 				<br/>
 				<div class="get-in">
+					<h5>Local</h5>
 					<p><i class="fas fa-map-marker-alt"></i> &nbsp;Minichácaras do Lago Sul,<br>Brasília DF</p></address>
 				</div>
 	</div>
