melhoria de contatos e serviços

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="revisit-after" content="1 days"/>
   <meta name="designer" content="Soluções Urbanas DF"/>
   <meta name="keywords" content=""/>
-  <meta name="description" content="Somos a Soluções Urbanas DF, projetamos, executamos e garantimos suas instalações, manutenções e projetos elétricos. Peritos e experientes, a mais de 20 anos no mercado desenvolvemos valor ao seu projeto e a melhor experiência para nossos clientes. Projetos e Instalação de Elétrica Residencial, Predial, Industrial e Telecomunicações. Fale com a gente de descubra como revolucionar seu projeto com o maior custo benefício do mercado. Amor aos detalhes que fazem a diferença." />
+  <meta name="description" content="Somos a Soluções Urbanas DF, projetamos, executamos e garantimos com excelência e agilidade. Elétrica Residencial, Automação Residencial, Elétrica Predial, Rede de Telecomunicação, Sites e Sistemas Web, Suporte Técnico" />
 	
 	
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" 
