--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Soluções Urbanas DF - Instalações Elétricas Brasília - Elétrica e Eletricista Brasília</title>
+<head><title>Soluções Urbanas DF - Elétrica Residencial, Automação Residencial, Elétrica Predial, Rede de Telecomunicação,Desenvolvimento de Sites e Sistemas Web, Suporte Técnico</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
