melhoria de contatos e serviços

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="revisit-after" content="1 days"/>
   <meta name="designer" content="Soluções Urbanas DF"/>
   <meta name="keywords" content=""/>
-  <meta name="description" content="Somos a Soluções Urbanas DF, projetamos, executamos e garantimos com excelência e agilidade. Elétrica Residencial, Automação Residencial, Elétrica Predial, Rede de Telecomunicação, Sites e Sistemas Web, Suporte Técnico" />
+  <meta name="description" content="Somos a Soluções Urbanas DF, projetamos, executamos e garantimos com excelência e agilidade. Elétrica Residencial e Predial, Automação Residencial, Rede de Telecomunicação, Sites e Sistemas Web" />
 	
 	
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" 
@@ -54,14 +54,10 @@ crossorigin="anonymous">
 <div class="header4-detail row text-center">
 	<div class="col-md-4 card-detail">
 	<i class="fas fa-plug" style="color:black"></i>
-	<h4>Elétrica Residencial</h4>
+	<h4>Elétrica Residencial e Predial</h4>
 	</div>
 	<div class="col-md-4 card-detail"><i class="fas fa-home" style="color:black"></i>
 	<h4>Automação Residencial</h4>
-	</div>
-	<div class="col-md-4 card-detail">
-	<i class="fab fa-codepen" style="color:black"></i>
-	<h4>Elétrica Predial</h4>
 	</div>
 	<div class="col-md-4 card-detail"><i class="fas fa-code-branch" style="color:black"></i>
 	<h4>Redes de Telecomunicação</h4>
@@ -70,10 +66,6 @@ crossorigin="anonymous">
 	<i class="fas fa-laptop-code" style="color:black"></i>
 	<h4>Sites e Sistemas Web</h4>
 	</div>
-	<div class="col-md-4 card-detail"><i class="fas fa-toolbox" style="color:black"></i>
-	<h4>Suporte Técnico</h4>
-	</div>
-
 	
 </div>
 </div>
