--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <meta name="designer" content="Soluções Urbanas DF"/>
   <meta name="keywords" content=""/>
   <meta name="description" content="Somos a Soluções Urbanas DF, projetamos, executamos e garantimos com excelência e agilidade. Elétrica Residencial e Predial, Automação Residencial, Rede de Telecomunicação, Sites e Sistemas Web" />
-	
+
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">	
 	
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" 
 crossorigin="anonymous">
