--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ crossorigin="anonymous">
 <div class="collapse navbar-collapse col-md-8 navbar-detail">
 	<ul class="navbar-nav">
 		<li class="nav-item active">
-			<a class="nav-link" href="#header-page4"><span class="sr-only">(current)</span></a>
+			<a class="nav-link" href="#header-page4"><span class="sr-only">Elétrica Residencial</span></a>
 		</li>
 	</ul>
 </div></nav>
@@ -56,7 +56,11 @@ crossorigin="anonymous">
 <div class="header4-detail row text-center">
 	<div class="col-md-4 card-detail">
 	<i class="fas fa-plug" style="color:black"></i>
-	<h4>Elétrica Residencial e Predial</h4>
+	<h4>Elétrica Residencial</h4>
+	</div>
+	<div class="col-md-4 card-detail">
+	<i class="fas fa-plug" style="color:black"></i>
+	<h4>Elétrica Predial</h4>
 	</div>
 	<div class="col-md-4 card-detail"><i class="fas fa-home" style="color:black"></i>
 	<h4>Automação Residencial</h4>
@@ -67,6 +71,10 @@ crossorigin="anonymous">
 	<div class="col-md-4 card-detail">
 	<i class="fas fa-laptop-code" style="color:black"></i>
 	<h4>Sites e Sistemas Web</h4>
+	</div>
+	<div class="col-md-4 card-detail">
+	<i class="fas fa-laptop-code" style="color:black"></i>
+	<h4>Soluções Web</h4>
 	</div>
 	
 </div>
