--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ crossorigin="anonymous">
 								<a href="mailto:pontesbravo@gmail.com" target="_blank" color="green" style="cursor:pointer">
 									<i class="fas fa-envelope"></i> pontesbravo<i class="fas fa-at"></i>gmail.com
 								</a>
-								<br> <i class="fas fa-clock"></i> Seg - Sáb, 9:00 - 18:00
+								<br> <i class="fas fa-clock"></i> Seg - Sáb, Agendamento Prévio
 							 </p>
 							
 							
