--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ crossorigin="anonymous">
 		<h5></h5>
     </div>
 	<div class="col-md-4 card-detail">
-		<a href="mailto:pontesbravo@gmail.com" target="_blank" color="green" style="cursor:pointer">
+		<a href="mailto:mundodepontes@gmail.com" target="_blank" color="green" style="cursor:pointer">
 			<i class="fas fa-envelope"></i> 
 		</a>
 		<h4>pontesbravo@gmail.com</h4>
