--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ crossorigin="anonymous">
 		<a href="mailto:mundodepontes@gmail.com" target="_blank" color="green" style="cursor:pointer">
 			<i class="fas fa-envelope"></i> 
 		</a>
-		<h4>pontesbravo@gmail.com</h4>
+		<h4>mundodepontes@gmail.com</h4>
 	</div>
 	<br/>
 </div>
